* sysdeps/kfreebsd.mk: also symlink x86 directory.
svn path=/glibc-package/trunk/; revision=5145

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+eglibc (2.13-26) UNRELEASED; urgency=low
+
+  [ Aurelien Jarno ]
+  * sysdeps/kfreebsd.mk: also symlink x86 directory.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 30 Jan 2012 23:01:02 +0100
+
 eglibc (2.13-25) unstable; urgency=medium
 
   [ Aurelien Jarno ]
