--- a/debian/changelog
+++ b/debian/changelog
@@ -23,7 +23,7 @@ eglibc (2.13-25) unstable; urgency=medium
   * Update Spanish debconf translation, by Omar Campagne.  Closes: #655850.
   * Danish debconf translation update from Joe Hansen.  Closes: #656681.
   * patches/alpha/submitted-epoll_create1.diff: new patch from Mike 
-    Frysinger to fix epoll_create1() on alpha.
+    Frysinger to fix epoll_create1() on alpha.  Closes: #653441.
   * debian/control.in/main: bump build-depends on libc-linux-dev to
     (>= 3.2.1-1) to get accept4 defined on ia64. 
     debian/libc6.1.symbols.ia64: force accept4 version to 2.13-25~.
