--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ eglibc (2.13-26) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * sysdeps/kfreebsd.mk: also symlink x86 directory.
+  * patches/any/submitted-resolv-first-query-failure.diff: new patch to fix
+    resolving issues with broken servers returning NOTIMP or FORMERR to AAAA
+    queries.  Closes: #658171.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 30 Jan 2012 23:01:02 +0100
 
