* kfreebsd/local-sysdeps.diff: update to revision 4053 (from glibc-bsd).
svn path=/glibc-package/trunk/; revision=5148

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ eglibc (2.13-26) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * sysdeps/kfreebsd.mk: also symlink x86 directory.
+  * kfreebsd/local-sysdeps.diff: update to revision 4053 (from glibc-bsd).
   * patches/any/submitted-resolv-first-query-failure.diff: new patch to fix
     resolving issues with broken servers returning NOTIMP or FORMERR to AAAA
     queries.  Closes: #658171.
