* patches/localedata/locale-nb_NO.diff: new patch to add Norwegian     transliteration.  Closes: #657511.
svn path=/glibc-package/trunk/; revision=5150

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ eglibc (2.13-26) UNRELEASED; urgency=low
   * patches/any/submitted-resolv-first-query-failure.diff: new patch to fix
     resolving issues with broken servers returning NOTIMP or FORMERR to AAAA
     queries.  Closes: #658171.
+  * patches/localedata/locale-nb_NO.diff: new patch to add Norwegian
+    transliteration.  Closes: #657511.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 30 Jan 2012 23:01:02 +0100
 
