--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-27) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 02 Feb 2012 22:05:30 +0100
+
 eglibc (2.13-26) unstable; urgency=low
 
   [ Aurelien Jarno ]
