patches/hurd-i386/local-select.diff: Do not apply the select(0) hack to vim, as it hurts its performance badly.
svn path=/glibc-package/trunk/; revision=5156

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 eglibc (2.13-27) UNRELEASED; urgency=low
 
-  * 
+  [ Samuel Thibault ]
+  * patches/hurd-i386/local-select.diff: Do not apply the select(0) hack to
+    vim, as it hurts its performance badly.
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 02 Feb 2012 22:05:30 +0100
+ -- Samuel Thibault <sthibault@debian.org>  Sat, 04 Feb 2012 15:40:55 +0100
 
 eglibc (2.13-26) unstable; urgency=low
 
