* kfreebsd/local-sysdeps.diff: update to revision 4080 (from glibc-bsd).     Closes: #653380.
svn path=/glibc-package/trunk/; revision=5157

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,11 @@ eglibc (2.13-27) UNRELEASED; urgency=low
   * patches/hurd-i386/local-select.diff: Do not apply the select(0) hack to
     vim, as it hurts its performance badly.
 
- -- Samuel Thibault <sthibault@debian.org>  Sat, 04 Feb 2012 15:40:55 +0100
+  [ Aurelien Jarno ]
+  * kfreebsd/local-sysdeps.diff: update to revision 4080 (from glibc-bsd).
+    Closes: #653380.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Feb 2012 11:12:52 +0100
 
 eglibc (2.13-26) unstable; urgency=low
 
