--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ eglibc (2.13-27) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * kfreebsd/local-sysdeps.diff: update to revision 4080 (from glibc-bsd).
     Closes: #653380.
+  * patches/localedata/first_weekday.diff: change first day of week to 
+    Sunday for es_AR locale.  Closes: #657064.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Feb 2012 11:12:52 +0100
 
