--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ eglibc (2.13-27) UNRELEASED; urgency=low
   [ Samuel Thibault ]
   * patches/hurd-i386/local-select.diff: Do not apply the select(0) hack to
     vim, as it hurts its performance badly.
+  * patches/hurd-i386/submitted-hurdsig-SA_SIGINFO.diff: merge
+    submitted-posix2008.diff fix.
 
   [ Aurelien Jarno ]
   * kfreebsd/local-sysdeps.diff: update to revision 4080 (from glibc-bsd).
