* local/manpages/gai.conf.5: update from latest RedHat version.  Closes:     #659504.
svn path=/glibc-package/trunk/; revision=5161

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ eglibc (2.13-27) UNRELEASED; urgency=low
     Closes: #653380.
   * patches/localedata/first_weekday.diff: change first day of week to 
     Sunday for es_AR locale.  Closes: #657064.
+  * local/manpages/gai.conf.5: update from latest RedHat version.  Closes:
+    #659504.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Feb 2012 11:12:52 +0100
 
