--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ eglibc (2.13-27) UNRELEASED; urgency=low
     Sunday for es_AR locale.  Closes: #657064.
   * local/manpages/gai.conf.5: update from latest RedHat version.  Closes:
     #659504.
+  * testsuite-checking/expected-results-arm-linux-gnueabihf-libc: new
+    file using the latest build as a reference.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Feb 2012 11:12:52 +0100
 
