* patches/mips/cvs-dlopen-lazy.diff: new patch from upstream to resolve     race between dlopen and lazy binding on MIPS.
svn path=/glibc-package/trunk/; revision=5164

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ eglibc (2.13-27) UNRELEASED; urgency=low
     #659504.
   * testsuite-checking/expected-results-arm-linux-gnueabihf-libc: new
     file using the latest build as a reference.
+  * patches/mips/cvs-dlopen-lazy.diff: new patch from upstream to resolve
+    race between dlopen and lazy binding on MIPS.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Feb 2012 11:12:52 +0100
 
