* patches/sparc/cvs-fcntl_h.diff: new patch from upstream to define     O_FSYNC on sparc.  Closes: #577577.
svn path=/glibc-package/trunk/; revision=5165

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ eglibc (2.13-27) UNRELEASED; urgency=low
     file using the latest build as a reference.
   * patches/mips/cvs-dlopen-lazy.diff: new patch from upstream to resolve
     race between dlopen and lazy binding on MIPS.
+  * patches/sparc/cvs-fcntl_h.diff: new patch from upstream to define 
+    O_FSYNC on sparc.  Closes: #577577.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Feb 2012 11:12:52 +0100
 
