patches/hurd-i386/{submitted,unsubmitted}-*: Rename to tg-* according to integration in upstream tg repository.
svn path=/glibc-package/trunk/; revision=5166

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ eglibc (2.13-27) UNRELEASED; urgency=low
     vim, as it hurts its performance badly.
   * patches/hurd-i386/submitted-hurdsig-SA_SIGINFO.diff: merge
     submitted-posix2008.diff fix.
+  * patches/hurd-i386/{submitted,unsubmitted}-*: Rename to tg-* according to
+    integration in upstream tg repository.
 
   [ Aurelien Jarno ]
   * kfreebsd/local-sysdeps.diff: update to revision 4080 (from glibc-bsd).
