Add bugs number
svn path=/glibc-package/trunk/; revision=5167

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,7 @@ eglibc (2.13-27) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * kfreebsd/local-sysdeps.diff: update to revision 4080 (from glibc-bsd).
-    Closes: #653380.
+    Closes: #653380, #660397, #660401.
   * patches/localedata/first_weekday.diff: change first day of week to 
     Sunday for es_AR locale.  Closes: #657064.
   * local/manpages/gai.conf.5: update from latest RedHat version.  Closes:
