* testsuite-checking/expected-results-mipsel-linux-gnu-libc,     testsuite-checking/expected-results-mips32el-linux-gnu-mipsn32,     testsuite-checking/expected-results-mips64el-linux-gnu-mips64: add     test-fenv.out to the list of known failures, it fails on loongson 2     machines due to a CPU bug.
svn path=/glibc-package/trunk/; revision=5170

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,11 @@ eglibc (2.13-27) UNRELEASED; urgency=low
     race between dlopen and lazy binding on MIPS.
   * patches/sparc/cvs-fcntl_h.diff: new patch from upstream to define 
     O_FSYNC on sparc.  Closes: #577577.
+  * testsuite-checking/expected-results-mipsel-linux-gnu-libc, 
+    testsuite-checking/expected-results-mips32el-linux-gnu-mipsn32,
+    testsuite-checking/expected-results-mips64el-linux-gnu-mips64: add 
+    test-fenv.out to the list of known failures, it fails on loongson 2
+    machines due to a CPU bug.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Feb 2012 11:12:52 +0100
 
