* Bump to Standards-Version 3.9.3 (no changes).
svn path=/glibc-package/trunk/; revision=5171

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ eglibc (2.13-27) UNRELEASED; urgency=low
     testsuite-checking/expected-results-mips64el-linux-gnu-mips64: add 
     test-fenv.out to the list of known failures, it fails on loongson 2
     machines due to a CPU bug.
+  * Bump to Standards-Version 3.9.3 (no changes).
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Feb 2012 11:12:52 +0100
 
