* Don't provide debug files for biarch packages to make libc6-dbg     co-installable.
svn path=/glibc-package/trunk/; revision=5172

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,8 @@ eglibc (2.13-27) UNRELEASED; urgency=low
     test-fenv.out to the list of known failures, it fails on loongson 2
     machines due to a CPU bug.
   * Bump to Standards-Version 3.9.3 (no changes).
+  * Don't provide debug files for biarch packages to make libc6-dbg 
+    co-installable.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Feb 2012 11:12:52 +0100
 
