Upload to unstable
svn path=/glibc-package/trunk/; revision=5173

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-27) UNRELEASED; urgency=low
+eglibc (2.13-27) unstable; urgency=low
 
   [ Samuel Thibault ]
   * patches/hurd-i386/local-select.diff: Do not apply the select(0) hack to
@@ -30,7 +30,7 @@ eglibc (2.13-27) UNRELEASED; urgency=low
   * Don't provide debug files for biarch packages to make libc6-dbg 
     co-installable.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Feb 2012 11:12:52 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 26 Feb 2012 18:50:40 +0100
 
 eglibc (2.13-26) unstable; urgency=low
 
