--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 eglibc (2.13-28) UNRELEASED; urgency=low
 
-  * 
+  [ Samuel Thibault ]
+  * patches/hurd-i386/tg-symlink_dealloc.diff: New patch from Ludovic Courtès
+    to fix port deallocation on symlink creation failure.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 27 Feb 2012 07:03:32 +0100
 
