patches/hurd-i386/unsubmitted-pthread_posix-option.diff: Refresh.
svn path=/glibc-package/trunk/; revision=5180

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ eglibc (2.13-28) UNRELEASED; urgency=low
   * patches/hurd-i386/tg-symlink_dealloc.diff: New patch from Ludovic Courtès
     to fix port deallocation on symlink creation failure.
   * patches/hurd-i386/tg-unwind-resume.diff: Remove patch, fixed upstream.
+  * patches/hurd-i386/unsubmitted-pthread_posix-option.diff: Refresh.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 27 Feb 2012 07:03:32 +0100
 
