--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ eglibc (2.13-28) UNRELEASED; urgency=low
     to fix port deallocation on symlink creation failure.
   * patches/hurd-i386/tg-unwind-resume.diff: Remove patch, fixed upstream.
   * patches/hurd-i386/unsubmitted-pthread_posix-option.diff: Refresh.
+  * patches/hurd-i386/submitted-net.diff: Refresh.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 27 Feb 2012 07:03:32 +0100
 
