Hackish workaround for i386 multiarch/multilib PI disappearing tricks (plus a small fix for the RTLD_SO replacement)
svn path=/glibc-package/trunk/; revision=5183

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,10 @@
 eglibc (2.13-28) UNRELEASED; urgency=low
 
+  [ Adam Conrad ]
+  * debian/rules.d/debhelper.mk: Fix RTLD_SO replacement regex for sanity.
+  * debian/debhelper.in/libc{,-alt}.postrm: If we remove libc6:i386 before
+    libc6-i386:amd64, maintain sanity of /lib/ld-linux.so.2 (LP: #852101)
+
   [ Samuel Thibault ]
   * patches/hurd-i386/tg-symlink_dealloc.diff: New patch from Ludovic Courtès
     to fix port deallocation on symlink creation failure.
