Add myself to uploaders and release
svn path=/glibc-package/trunk/; revision=5185

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-28) UNRELEASED; urgency=low
+eglibc (2.13-28) unstable; urgency=low
 
   [ Adam Conrad ]
   * debian/rules.d/debhelper.mk: Fix RTLD_SO replacement regex for sanity.
@@ -30,7 +30,7 @@ eglibc (2.13-28) UNRELEASED; urgency=low
   * patches/hurd-i386/unsubmitted-pthread_posix-option.diff: Refresh.
   * patches/hurd-i386/submitted-net.diff: Refresh.
 
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 27 Feb 2012 07:03:32 +0100
+ -- Adam Conrad <adconrad@0c3.net>  Mon, 16 Apr 2012 10:11:05 -0600
 
 eglibc (2.13-27) unstable; urgency=low
 
