New changelog entry
svn path=/glibc-package/trunk/; revision=5187

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-29) UNRELEASED; urgency=low
+
+  * 
+
+ -- Adam Conrad <adconrad@0c3.net>  Mon, 16 Apr 2012 22:28:06 -0600
+
 eglibc (2.13-28) unstable; urgency=low
 
   [ Adam Conrad ]
