debian/debhelper.in/libc.{preinst,postinst}: Make use of dpkg's DPKG_MAINTSCRIPT_ARCH variable and guard it so it doesn't make older non-multi-arch dpkg versions have a sad (closes: #669172)
svn path=/glibc-package/trunk/; revision=5188

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 eglibc (2.13-29) UNRELEASED; urgency=low
 
-  * 
+  * debian/debhelper.in/libc.{preinst,postinst}: Make use of dpkg's
+    DPKG_MAINTSCRIPT_ARCH variable and guard it so it doesn't make
+    older non-multi-arch dpkg versions have a sad (closes: #669172)
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 16 Apr 2012 22:28:06 -0600
 
