--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-29) UNRELEASED; urgency=low
+eglibc (2.13-29) unstable; urgency=low
 
   * debian/debhelper.in/libc.{preinst,postinst}: Make use of dpkg's
     DPKG_MAINTSCRIPT_ARCH variable and guard it so it doesn't make
