Guard DPKG_MAINTSCRIPT_ARCH usage with dpkg --assert-multi-arch, since squeeze's dpkg has a half-implementation (closes: #669172)
svn path=/glibc-package/trunk/; revision=5191

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+eglibc (2.13-30) unstable; urgency=low
+
+  * Guard DPKG_MAINTSCRIPT_ARCH usage with dpkg --assert-multi-arch,
+    since squeeze's dpkg has a half-implementation (closes: #669172)
+
+ -- Adam Conrad <adconrad@0c3.net>  Wed, 18 Apr 2012 05:08:21 -0600
+
 eglibc (2.13-29) unstable; urgency=low
 
   * debian/debhelper.in/libc.{preinst,postinst}: Make use of dpkg's
