New changelog entry
svn path=/glibc-package/trunk/; revision=5193

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-31) UNRELEASED; urgency=low
+
+  * 
+
+ -- Adam Conrad <adconrad@0c3.net>  Thu, 19 Apr 2012 17:12:08 -0600
+
 eglibc (2.13-30) unstable; urgency=low
 
   * Guard DPKG_MAINTSCRIPT_ARCH usage with dpkg --assert-multi-arch,
