alter kfreebsd/local-use-thr-primitives.diff. See: #654783.
svn path=/glibc-package/trunk/; revision=5194

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 eglibc (2.13-31) UNRELEASED; urgency=low
 
-  * 
+  [ Petr Salinger ]
+  * alter kfreebsd/local-use-thr-primitives.diff. See: #654783.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 19 Apr 2012 17:12:08 -0600
 
