--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ eglibc (2.13-31) UNRELEASED; urgency=low
   [ Petr Salinger ]
   * alter kfreebsd/local-use-thr-primitives.diff. See: #654783.
   * kfreebsd/local-sysdeps.diff: update to revision 4221 (from glibc-bsd).
+    Closes: #642112, #662018, #669424.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 19 Apr 2012 17:12:08 -0600
 
