New patch to fix Hurd hooks order.
svn path=/glibc-package/trunk/; revision=5198

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,10 @@ eglibc (2.13-31) UNRELEASED; urgency=low
   * kfreebsd/local-sysdeps.diff: update to revision 4222 (from glibc-bsd).
     Closes: #642112, #662018, #669424.
 
- -- Adam Conrad <adconrad@0c3.net>  Thu, 19 Apr 2012 17:12:08 -0600
+  [ Samuel Thibault ]
+  * patches/hurd-i386/tg-hooks.diff: New patch to fix Hurd hooks order.
+
+ -- Samuel Thibault <sthibault@debian.org>  Sat, 21 Apr 2012 21:33:38 +0200
 
 eglibc (2.13-30) unstable; urgency=low
 
