--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,8 @@ eglibc (2.13-31~0+hurd.1) unreleased; urgency=low
   * debhelper.in/libc-dev.install.hurd-i386: Add libpthread.a and
     libpthread2.a.
   * control.in/libc,control: Make libc-dev replace the hurd package.
+  * patches/hurd-i386/tg-symlink_dealloc.diff: Replace with...
+  * patches/hurd-i386/cvs-symlink_dealloc.diff: ... upstream version.
 
  -- Samuel Thibault <sthibault@debian.org>  Mon, 23 Apr 2012 00:15:44 +0000
 
