Drop spurious version change
svn path=/glibc-package/trunk/; revision=5203

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-31~0+hurd.1) unreleased; urgency=low
+eglibc (2.13-31) UNRELEASED; urgency=low
 
   [ Petr Salinger ]
   * alter kfreebsd/local-use-thr-primitives.diff. See: #654783.
