* patches/hurd-i386/libpthread_version.diff: New patch to mark when   libpthread was moved to glibc. * libc0.3.symbols.hurd-i386: Add version dependency for libpthread forward   stubs in libc.
svn path=/glibc-package/trunk/; revision=5204

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ eglibc (2.13-31) UNRELEASED; urgency=low
   * patches/hurd-i386/tg-hooks.diff: New patch to fix Hurd hooks order.
   * patches/hurd-i386/libpthread.diff: New patch to import Hurd libpthread as
     an add-on.
+  * patches/hurd-i386/libpthread_version.diff: New patch to mark when
+    libpthread was moved to glibc.
+  * libc0.3.symbols.hurd-i386: Add version dependency for libpthread forward
+    stubs in libc.
   * patches/hurd-i386/libpthread_clean.diff: New patch to remove useless parts
     of Hurd libpthread which come in the way.
   * patches/hurd-i386/tg-libpthread_depend.diff: New patch to add add-on
