* patches/localedata/locale-C.diff: add an LC_TIME section.  Closes:     #661878.
svn path=/glibc-package/trunk/; revision=5205

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,7 +41,11 @@ eglibc (2.13-31) UNRELEASED; urgency=low
   * patches/hurd-i386/tg-symlink_dealloc.diff: Replace with...
   * patches/hurd-i386/cvs-symlink_dealloc.diff: ... upstream version.
 
- -- Samuel Thibault <sthibault@debian.org>  Mon, 23 Apr 2012 00:15:44 +0000
+  [ Aurelien Jarno ]
+  * patches/localedata/locale-C.diff: add an LC_TIME section.  Closes:
+    #661878. 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
 eglibc (2.13-30) unstable; urgency=low
 
