--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 eglibc (2.13-31) UNRELEASED; urgency=low
 
   [ Petr Salinger ]
-  * alter kfreebsd/local-use-thr-primitives.diff. See: #654783.
+  * alter kfreebsd/local-use-thr-primitives.diff. Closes: #654783.
   * kfreebsd/local-sysdeps.diff: update to revision 4222 (from glibc-bsd).
     Closes: #642112, #662018, #669424.
 
