* patches/arm/cvs-make-get-set-swap-context.diff: backport     make/get/set/swapcontext from upstream.  Closes: #369453, #663150.
svn path=/glibc-package/trunk/; revision=5207

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,8 @@ eglibc (2.13-31) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * patches/localedata/locale-C.diff: add an LC_TIME section.  Closes:
     #661878. 
+  * patches/arm/cvs-make-get-set-swap-context.diff: backport 
+    make/get/set/swapcontext from upstream.  Closes: #369453, #663150.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
