* patches/arm/unsubmitted-soname-hack.diff: rename into     patches/arm/local-soname-hack.diff to fix non-policy compliant patch     name.
svn path=/glibc-package/trunk/; revision=5208

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,9 @@ eglibc (2.13-31) UNRELEASED; urgency=low
     #661878. 
   * patches/arm/cvs-make-get-set-swap-context.diff: backport 
     make/get/set/swapcontext from upstream.  Closes: #369453, #663150.
+  * patches/arm/unsubmitted-soname-hack.diff: rename into 
+    patches/arm/local-soname-hack.diff to fix non-policy compliant patch
+    name.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
