* Don't install getent(1).  Closes: #665303.
svn path=/glibc-package/trunk/; revision=5209

--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,7 @@ eglibc (2.13-31) UNRELEASED; urgency=low
   * patches/arm/unsubmitted-soname-hack.diff: rename into 
     patches/arm/local-soname-hack.diff to fix non-policy compliant patch
     name.
+  * Don't install getent(1).  Closes: #665303.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
