* Add patches/any/local-linuxthreads-setclock.diff from Robert Millan to     add pthread_condattr_setclock() support to linuxthreads.  Closes:     #667687.
svn path=/glibc-package/trunk/; revision=5211

--- a/debian/changelog
+++ b/debian/changelog
@@ -52,6 +52,9 @@ eglibc (2.13-31) UNRELEASED; urgency=low
   * Don't install getent(1).  Closes: #665303.
   * Add patches/any/cvs-getaddrinfo-AI_V4MAPPED.diff to correctly handle
     AI_V4MAPPED flag in getaddrinfo().  Closes: #663752.
+  * Add patches/any/local-linuxthreads-setclock.diff from Robert Millan to
+    add pthread_condattr_setclock() support to linuxthreads.  Closes: 
+    #667687.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
