* patches/any/local-disable-nscd-host-caching.diff: remove, as the host     caching issue has been fixed in the meanwhile.  Closes: #669304.
svn path=/glibc-package/trunk/; revision=5212

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,8 @@ eglibc (2.13-31) UNRELEASED; urgency=low
   * Add patches/any/local-linuxthreads-setclock.diff from Robert Millan to
     add pthread_condattr_setclock() support to linuxthreads.  Closes: 
     #667687.
+  * patches/any/local-disable-nscd-host-caching.diff: remove, as the host
+    caching issue has been fixed in the meanwhile.  Closes: #669304.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
