* patches/any/cvs-FORTIFY_SOURCE-format-strings.diff: new patch from     upstream to fix FORTIFY_SOURCE format string protection bypass.  Closes:     #660611.
svn path=/glibc-package/trunk/; revision=5214

--- a/debian/changelog
+++ b/debian/changelog
@@ -57,6 +57,9 @@ eglibc (2.13-31) UNRELEASED; urgency=low
     #667687.
   * patches/any/local-disable-nscd-host-caching.diff: remove, as the host
     caching issue has been fixed in the meanwhile.  Closes: #669304.
+  * patches/any/cvs-FORTIFY_SOURCE-format-strings.diff: new patch from
+    upstream to fix FORTIFY_SOURCE format string protection bypass.  Closes:
+    #660611.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
