* patches/kfreebsd/local-sys_queue_h.diff: fix STAILQ_FOREACH_SAFE.     Closes: #669960.
svn path=/glibc-package/trunk/; revision=5216

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,8 @@ eglibc (2.13-31) UNRELEASED; urgency=low
   * patches/any/cvs-FORTIFY_SOURCE-format-strings.diff: new patch from
     upstream to fix FORTIFY_SOURCE format string protection bypass.  Closes:
     #660611.
+  * patches/kfreebsd/local-sys_queue_h.diff: fix STAILQ_FOREACH_SAFE.  
+    Closes: #669960.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
