--- a/debian/changelog
+++ b/debian/changelog
@@ -64,6 +64,7 @@ eglibc (2.13-31) UNRELEASED; urgency=low
     #660611.
   * patches/kfreebsd/local-sys_queue_h.diff: fix STAILQ_FOREACH_SAFE.  
     Closes: #669960.
+  * local/manpages/locale.1: fix warnings from "groff".  Closes: #661041.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
