* local/manpages/ld.so.8: update from various sources to document missing     environment variables.  Closes: #669179.
svn path=/glibc-package/trunk/; revision=5226

--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,8 @@ eglibc (2.13-31) UNRELEASED; urgency=low
   * local/manpages/locale.1: fix warnings from "groff".  Closes: #661041.
   * patches/hppa/*: update hppa patchset from a mix of CVS, submitted and
     unknown sources patches.  Closes: #666774.
+  * local/manpages/ld.so.8: update from various sources to document missing
+    environment variables.  Closes: #669179.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
