* patches/locatedata/cvs-es-lc_numeric.diff: new patch from upstream to     fix LC_NUMERIC for Spanish locales.  Closes: #668674.
svn path=/glibc-package/trunk/; revision=5227

--- a/debian/changelog
+++ b/debian/changelog
@@ -67,6 +67,8 @@ eglibc (2.13-31) UNRELEASED; urgency=low
     unknown sources patches.  Closes: #666774.
   * local/manpages/ld.so.8: update from various sources to document missing
     environment variables.  Closes: #669179.
+  * patches/locatedata/cvs-es-lc_numeric.diff: new patch from upstream to
+    fix LC_NUMERIC for Spanish locales.  Closes: #668674.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
