* patches/localedata/submitted-de_AT-mon.diff: fix month names in de_AT     locale.  Closes: #661760.
svn path=/glibc-package/trunk/; revision=5228

--- a/debian/changelog
+++ b/debian/changelog
@@ -69,6 +69,8 @@ eglibc (2.13-31) UNRELEASED; urgency=low
     environment variables.  Closes: #669179.
   * patches/locatedata/cvs-es-lc_numeric.diff: new patch from upstream to
     fix LC_NUMERIC for Spanish locales.  Closes: #668674.
+  * patches/localedata/submitted-de_AT-mon.diff: fix month names in de_AT
+    locale.  Closes: #661760.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
