Update the changelog
svn path=/glibc-package/trunk/; revision=5230

--- a/debian/changelog
+++ b/debian/changelog
@@ -71,6 +71,8 @@ eglibc (2.13-31) UNRELEASED; urgency=low
     fix LC_NUMERIC for Spanish locales.  Closes: #668674.
   * patches/localedata/submitted-de_AT-mon.diff: fix month names in de_AT
     locale.  Closes: #661760.
+  * patches/localedata/submitted-en_AU-date_fmt.diff: fix date_fmt for
+    en_AU locale.  Closes: #663203.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
 
