--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-31) UNRELEASED; urgency=low
+eglibc (2.13-31) unstable; urgency=low
 
   [ Petr Salinger ]
   * alter kfreebsd/local-use-thr-primitives.diff. Closes: #654783.
@@ -74,7 +74,7 @@ eglibc (2.13-31) UNRELEASED; urgency=low
   * patches/localedata/submitted-en_AU-date_fmt.diff: fix date_fmt for
     en_AU locale.  Closes: #663203.
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Apr 2012 16:37:27 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 29 Apr 2012 17:45:45 +0200
 
 eglibc (2.13-30) unstable; urgency=low
 
