--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-32) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 29 Apr 2012 19:03:35 +0200
+
 eglibc (2.13-31) unstable; urgency=low
 
   [ Petr Salinger ]
