* Fix kfreebsd symbols files.  Closes: #667687.
svn path=/glibc-package/trunk/; revision=5235

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 eglibc (2.13-32) UNRELEASED; urgency=low
 
-  * 
+  * Fix kfreebsd symbols files.  Closes: #667687.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 29 Apr 2012 19:03:35 +0200
 
