--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 eglibc (2.13-32) UNRELEASED; urgency=low
 
   * Fix kfreebsd symbols files.  Closes: #667687.
+  * local/manpages/ld.so.8: fixes after previous rework.  Closes: 
+    #670883.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 29 Apr 2012 19:03:35 +0200
 
