* patches/any/local-ld-multiarch.diff: update to correctly compute     $ORIGIN with two level slibdir directories.  Closes: #632281.
svn path=/glibc-package/trunk/; revision=5237

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ eglibc (2.13-32) UNRELEASED; urgency=low
   * Fix kfreebsd symbols files.  Closes: #667687.
   * local/manpages/ld.so.8: fixes after previous rework.  Closes: 
     #670883.
+  * patches/any/local-ld-multiarch.diff: update to correctly compute
+    $ORIGIN with two level slibdir directories.  Closes: #632281.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 29 Apr 2012 19:03:35 +0200
 
