* debian/control.in/libc: update description.  Closes: #671036.
svn path=/glibc-package/trunk/; revision=5238

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ eglibc (2.13-32) UNRELEASED; urgency=low
     #670883.
   * patches/any/local-ld-multiarch.diff: update to correctly compute
     $ORIGIN with two level slibdir directories.  Closes: #632281.
+  * debian/control.in/libc: update description.  Closes: #671036.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 29 Apr 2012 19:03:35 +0200
 
