--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-32) UNRELEASED; urgency=low
+eglibc (2.13-32) unstable; urgency=medium
 
   * Fix kfreebsd symbols files.  Closes: #667687.
   * local/manpages/ld.so.8: fixes after previous rework.  Closes: 
@@ -7,7 +7,7 @@ eglibc (2.13-32) UNRELEASED; urgency=low
     $ORIGIN with two level slibdir directories.  Closes: #632281.
   * debian/control.in/libc: update description.  Closes: #671036.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 29 Apr 2012 19:03:35 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 01 May 2012 16:08:11 +0200
 
 eglibc (2.13-31) unstable; urgency=low
 
