New changelog entry
svn path=/glibc-package/trunk/; revision=5241

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-33) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 01 May 2012 22:49:44 +0200
+
 eglibc (2.13-32) unstable; urgency=medium
 
   * Fix kfreebsd symbols files.  Closes: #667687.
