use new rupee symbol in Indian locales, thanks to Prema.  closes: #671299.
svn path=/glibc-package/trunk/; revision=5244

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 eglibc (2.13-33) UNRELEASED; urgency=low
 
-  * 
+  * patches/localedata/cvs-rupeesign.diff: use new rupee symbol
+    in Indian locales, thanks to Prema.  closes: #671299.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 01 May 2012 22:49:44 +0200
+ -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
 eglibc (2.13-32) unstable; urgency=medium
 
