* patches/hurd-i386/cvs-eaf.diff: New patch to fix socket() EAFNOSUPPORT error     value.
svn path=/glibc-package/trunk/; revision=5247

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 eglibc (2.13-33) UNRELEASED; urgency=low
 
+  [ Clint Adams ]
   * patches/localedata/cvs-rupeesign.diff: use new rupee symbol
     in Indian locales, thanks to Prema.  closes: #671299.
+
+  [ Samuel Thibault ]
+  * patches/hurd-i386/cvs-eaf.diff: New patch to fix socket() EAFNOSUPPORT error
+    value.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
