* patches/hurd-i386/tg-{IPV6_PKTINFO,SOL_IP,____longjmp_chk,catch-signal,     critical-sections,dl-sysdep.c_SHARED,dup3,ioctl-decode-argument,     itimer-lock,libc_stack_end,mach-nanosleep,mkdir_root,mlock,null-pathname,     posix2008,posix_opt.h,readlinkat,hurd-recvfrom,sbrk,select-inputcheck,     setresid,hurd_socket_server_indexcheck,strtoul_PLT,struct_stat,     dup3-lock}.diff: Refresh with upstream version and rename to cvs.   * patches/hurd-i386/cvs-O_CLOEXEC.diff: New patch to accept use of O_CLOEXEC     in rtld.
svn path=/glibc-package/trunk/; revision=5249

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,16 @@ eglibc (2.13-33) UNRELEASED; urgency=low
   * patches/localedata/cvs-rupeesign.diff: use new rupee symbol
     in Indian locales, thanks to Prema.  closes: #671299.
 
+  [ Samuel Thibault ]
+  * patches/hurd-i386/tg-{IPV6_PKTINFO,SOL_IP,____longjmp_chk,catch-signal,
+    critical-sections,dl-sysdep.c_SHARED,dup3,ioctl-decode-argument,
+    itimer-lock,libc_stack_end,mach-nanosleep,mkdir_root,mlock,null-pathname,
+    posix2008,posix_opt.h,readlinkat,hurd-recvfrom,sbrk,select-inputcheck,
+    setresid,hurd_socket_server_indexcheck,strtoul_PLT,struct_stat,
+    dup3-lock}.diff: Refresh with upstream version and rename to cvs.
+  * patches/hurd-i386/cvs-O_CLOEXEC.diff: New patch to accept use of O_CLOEXEC
+    in rtld.
+
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
 eglibc (2.13-32) unstable; urgency=medium
