--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,13 @@ eglibc (2.13-33) UNRELEASED; urgency=low
     dup3-lock}.diff: Refresh with upstream version and rename to cvs.
   * patches/hurd-i386/cvs-O_CLOEXEC.diff: New patch to accept use of O_CLOEXEC
     in rtld.
+  * patches/hurd-i386/submitted-add-needed.diff: New patch from Pino to reject
+    some out of range values.
+  * patches/hurd-i386/submitted-getlogin_r.diff: New patch from Pino to fix
+    re-entrancy of getlogin_r and return ERANGE when the provided buffer is
+    too small.
+  * patches/hurd-i386/submitted-add-needed.diff: New patch from Pino to fix
+    buffer checks in ptsname.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
