patches/hurd-i386/tg-hooks.diff: Add rules to sort _hurd_fork_locks.
svn path=/glibc-package/trunk/; revision=5251

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ eglibc (2.13-33) UNRELEASED; urgency=low
     too small.
   * patches/hurd-i386/submitted-add-needed.diff: New patch from Pino to fix
     buffer checks in ptsname.
+  * patches/hurd-i386/tg-hooks.diff: Add rules to sort _hurd_fork_locks.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
