--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,8 @@ eglibc (2.13-33) UNRELEASED; urgency=low
   * patches/hurd-i386/submitted-ptsname.diff: New patch from Pino to fix
     buffer checks in ptsname.
   * patches/hurd-i386/tg-hooks.diff: Add rules to sort _hurd_fork_locks.
+  * patches/hurd-i386/submitted-sendto.diff: New patch from Pino to fix
+    sendto() calls with NULL addr.
   * control/{main,libc}: Remove libpthread-stubs-dev dependency on hurd-i386.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
