patches/hurd-i386/libpthread.diff: Add -lrt in libpthread.a to fix static linking.
svn path=/glibc-package/trunk/; revision=5256

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ eglibc (2.13-33) UNRELEASED; urgency=low
   * patches/hurd-i386/submitted-sendto.diff: New patch from Pino to fix
     sendto() calls with NULL addr.
   * control/{main,libc}: Remove libpthread-stubs-dev dependency on hurd-i386.
+  * patches/hurd-i386/libpthread.diff: Add -lrt in libpthread.a to fix static
+    linking.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
