fixup any/local-linuxthreads-setclock.diff. Closes: #673711.
svn path=/glibc-package/trunk/; revision=5257

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-33) UNRELEASED; urgency=low
+eglibc (2.13-33) UNRELEASED; urgency=medium
 
   [ Clint Adams ]
   * patches/localedata/cvs-rupeesign.diff: use new rupee symbol
@@ -26,6 +26,9 @@ eglibc (2.13-33) UNRELEASED; urgency=low
   * control/{main,libc}: Remove libpthread-stubs-dev dependency on hurd-i386.
   * patches/hurd-i386/libpthread.diff: Add -lrt in libpthread.a to fix static
     linking.
+
+  [ Petr Salinger ]
+  * fixup any/local-linuxthreads-setclock.diff. Closes: #673711.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
