kfreebsd/local-sysdeps.diff: update to revision 4286 (from glibc-bsd).
svn path=/glibc-package/trunk/; revision=5258

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
     linking.
 
   [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 4286 (from glibc-bsd).
   * fixup any/local-linuxthreads-setclock.diff. Closes: #673711.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
