* debian/control.in/main: set glibc-doc as Multiarch: foreign.     Closes: #674645.
svn path=/glibc-package/trunk/; revision=5259

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,10 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
   * kfreebsd/local-sysdeps.diff: update to revision 4286 (from glibc-bsd).
   * fixup any/local-linuxthreads-setclock.diff. Closes: #673711.
 
+  [ Aurelien Jarno ]
+  * debian/control.in/main: set glibc-doc as Multiarch: foreign. 
+    Closes: #674645.
+
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
 eglibc (2.13-32) unstable; urgency=medium
