--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,7 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
   [ Aurelien Jarno ]
   * debian/control.in/main: set glibc-doc as Multiarch: foreign. 
     Closes: #674645.
+  * Update Portuguese debconf translation, by Pedro Ribeiro.  Closes: #674954.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
