--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,8 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
   * debian/control.in/main: set glibc-doc as Multiarch: foreign. 
     Closes: #674645.
   * Update Portuguese debconf translation, by Pedro Ribeiro.  Closes: #674954.
+  * patches/arm/unsubmitted-ldso-abi-check.diff: fix broken armhf specific 
+    hack.  Closes: #674602.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
