* patches/any/cvs-regex.diff: fix access after end of search string in regex     matcher.  Closes: #672688.
svn path=/glibc-package/trunk/; revision=5262

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,8 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
   * Update Portuguese debconf translation, by Pedro Ribeiro.  Closes: #674954.
   * patches/arm/unsubmitted-ldso-abi-check.diff: fix broken armhf specific 
     hack.  Closes: #674602.
+  * patches/any/cvs-regex.diff: fix access after end of search string in regex
+    matcher.  Closes: #672688.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
