* patches/localedata/submitted-es_MX-decimal_point.diff: fix     decimal_point and thousands_sep.  Closes: #673339.
svn path=/glibc-package/trunk/; revision=5264

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,8 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
     matcher.  Closes: #672688.
   * patches/any/cvs-getpwuid-nsswitch.diff: fix a memory leak in
     getpwuid/nsswitch.c.  Closes: #674072.
+  * patches/localedata/submitted-es_MX-decimal_point.diff: fix
+    decimal_point and thousands_sep.  Closes: #673339.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
